--- a/Parsers/Parser.ipynb
+++ b/Parsers/Parser.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "b8f9406e",
+   "execution_count": 23,
+   "id": "3f17a9a5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def parse(driver,l,count):\n",
+    "def parse(driver,l):\n",
     "    results = []\n",
+    "    count = [0]*len(l)\n",
     "    \n",
     "    #TITLE\n",
     "    titleStr = driver.find_element_by_id(\"title\").text\n",
@@ -67,8 +68,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "8bddec91",
+   "execution_count": 24,
+   "id": "2df75f1d",
    "metadata": {},
    "outputs": [
     {
@@ -91,9 +92,8 @@
     "\n",
     "#GENE ARRAY\n",
     "l = [\"TP53\",\"TNF\",\"EGFR\",\"VEGFA\",\"APOE\",\"IL6\",\"TGFBI\",\"MTHFR\",\"ESR1\",\"AKT1\"]\n",
-    "count = [0]*len(l)\n",
     "\n",
-    "list = parse(driver,l,count)\n",
+    "list = parse(driver,l)\n",
     "\n",
     "print(\"Genes found\")\n",
     "for x in list:\n",
@@ -105,7 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30ab1f8b",
+   "id": "7aedccc6",
    "metadata": {},
    "outputs": [],
    "source": []
