--- a/OpenTargets+Aliases.ipynb
+++ b/OpenTargets+Aliases.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 153,
    "metadata": {
     "scrolled": false
    },
@@ -134,7 +134,11 @@
     "            search = \"Original target not found, closest target found: \" + target2\n",
     "        elif searchno == 0:\n",
     "            search = target2\n",
-    "\n",
+    "        \n",
+    "        \n",
+    "        if len(conditions)>10:\n",
+    "            conditions = conditions[:10]\n",
+    "        \n",
     "        \n",
     "        driver.close()\n",
     "\n",
@@ -147,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [
     {
@@ -155,87 +159,45 @@
      "output_type": "stream",
      "text": [
       "Target found\n",
-      "IL6 is also known as:\n",
-      "                        Interleukin 6\n",
-      "                        IL-6\n",
-      "                        B-Cell Stimulatory Factor 2\n",
-      "                        CTL Differentiation Factor\n",
-      "                        Hybridoma Growth Factor\n",
-      "                        Interferon Beta-2\n",
-      "                        Interleukin-6\n",
-      "                        IFN-Beta-2\n",
-      "                        BSF-2\n",
-      "                        IFNB2\n",
-      "                        BSF2\n",
-      "                        CDF\n",
-      "                        HGF\n",
-      "                        HSF\n",
-      "                        Interleukin 6 (Interferon, Beta\n",
-      "                        B-Cell Differentiation Factor\n",
-      "                        Interferon, Beta\n",
-      "                        Interleukin BSF-2\n",
-      "                        IL6\n",
+      "TNF is also known as:\n",
+      "                        Tumor Necrosis Factor\n",
+      "                        TNF-Alpha\n",
+      "                        TNFSF2\n",
+      "                        Tumor Necrosis Factor Ligand Superfamily Member 2\n",
+      "                        TNF-A\n",
+      "                        TNFA\n",
+      "                        DIF\n",
+      "                        Tumor Necrosis Factor (TNF Superfamily, Member\n",
+      "                        Tumor Necrosis Factor Ligand 1F\n",
+      "                        Tumor Necrosis Factor-Alpha\n",
+      "                        TNF Superfamily, Member\n",
+      "                        TNF, Macrophage-Derived\n",
+      "                        TNF, Monocyte-Derived\n",
+      "                        APC1 Protein\n",
+      "                        Cachectin\n",
+      "                        TNLG1F\n",
+      "                        TNF\n",
       "\n",
-      "Source: https://www.genecards.org/cgi-bin/carddisp.pl?gene=il6\n",
+      "Source: https://www.genecards.org/cgi-bin/carddisp.pl?gene=tnf\n",
       "\n",
-      "IL6 top associated diseases/conditions/states:\n",
+      "TNF top associated diseases/conditions/states:\n",
+      "                        psoriatic arthritis\n",
       "                        rheumatoid arthritis\n",
-      "                        immune system disease\n",
-      "                        asthma\n",
-      "                        systemic juvenile idiopathic arthritis\n",
-      "                        Kaposi's sarcoma\n",
+      "                        psoriasis\n",
+      "                        Crohn's disease\n",
+      "                        ankylosing spondylitis\n",
+      "                        ulcerative colitis\n",
       "                        juvenile idiopathic arthritis\n",
-      "                        Kaposi sarcoma, susceptibility to\n",
-      "                        Giant Lymph Node Hyperplasia\n",
-      "                        longevity\n",
-      "                        eosinophil percentage of leukocytes\n",
-      "                        glioblastoma multiforme\n",
-      "                        multiple myeloma\n",
-      "                        pancreatic adenocarcinoma\n",
-      "                        childhood onset asthma\n",
-      "                        lung adenocarcinoma\n",
-      "                        ovarian cancer\n",
-      "                        COVID-19\n",
-      "                        breast adenocarcinoma\n",
-      "                        birth weight\n",
-      "                        eosinophil count\n",
-      "                        head and neck squamous cell carcinoma\n",
-      "                        low grade glioma\n",
-      "                        endometrial cancer\n",
-      "                        leukocyte count\n",
-      "                        temporal arteritis\n",
-      "                        polymyalgia rheumatica\n",
-      "                        cutaneous melanoma\n",
-      "                        sum of eosinophil and basophil counts\n",
-      "                        eosinophil percentage of granulocytes\n",
-      "                        parental genotype effect measurement\n",
-      "                        neutrophil percentage of granulocytes\n",
-      "                        peripheral arterial disease\n",
-      "                        C-reactive protein measurement\n",
-      "                        Takayasu arteritis\n",
-      "                        esophageal cancer\n",
-      "                        gastric adenocarcinoma\n",
-      "                        Non-syndromic genetic deafness\n",
-      "                        mean corpuscular hemoglobin\n",
-      "                        lymphocyte percentage of leukocytes\n",
-      "                        lymphocyte count\n",
-      "                        neutrophil percentage of leukocytes\n",
-      "                        serum non-albumin protein measurement\n",
-      "                        albumin:globulin ratio measurement\n",
-      "                        chronic lymphocytic leukemia\n",
-      "                        intestinal cancer\n",
-      "                        serum albumin measurement\n",
-      "                        systemic lupus erythematosus\n",
-      "                        prostate cancer\n",
-      "                        inflammatory bowel disease\n",
-      "                        schizophrenia\n",
+      "                        spondyloarthropathy\n",
+      "                        immune system disease\n",
+      "                        hidradenitis suppurativa\n",
       "\n",
-      "Source: https://platform.opentargets.org/target/ENSG00000136244/associations\n"
+      "Source: https://platform.opentargets.org/target/ENSG00000232810/associations\n"
      ]
     }
    ],
    "source": [
-    "diseaseconditions, names, genename, link1, link2, closestpossibletarget = getopentargets(\"il6\") #change input string to a gene name\n",
+    "diseaseconditions, names, genename, link1, link2, closestpossibletarget = getopentargets(\"tnf\") #change input string to a gene name\n",
     "print(closestpossibletarget)\n",
     "print(genename + \" is also known as:\")\n",
     "for rafis in names:\n",
