Reupload but with slightly cleaner code

--- a/OpenTargets+Aliases/OpenTargets+Aliases.ipynb
+++ b/OpenTargets+Aliases/OpenTargets+Aliases.ipynb
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [
     {
@@ -159,45 +159,48 @@
      "output_type": "stream",
      "text": [
       "Target found\n",
-      "TNF is also known as:\n",
-      "                        Tumor Necrosis Factor\n",
-      "                        TNF-Alpha\n",
-      "                        TNFSF2\n",
-      "                        Tumor Necrosis Factor Ligand Superfamily Member 2\n",
-      "                        TNF-A\n",
-      "                        TNFA\n",
-      "                        DIF\n",
-      "                        Tumor Necrosis Factor (TNF Superfamily, Member\n",
-      "                        Tumor Necrosis Factor Ligand 1F\n",
-      "                        Tumor Necrosis Factor-Alpha\n",
-      "                        TNF Superfamily, Member\n",
-      "                        TNF, Macrophage-Derived\n",
-      "                        TNF, Monocyte-Derived\n",
-      "                        APC1 Protein\n",
-      "                        Cachectin\n",
-      "                        TNLG1F\n",
-      "                        TNF\n",
+      "DPP4 is also known as:\n",
+      "                        Dipeptidyl Peptidase 4\n",
+      "                        Adenosine Deaminase Complexing Protein 2\n",
+      "                        Dipeptidylpeptidase IV (CD26, Adenosine Deaminase Complexing Protein 2)\n",
+      "                        T-Cell Activation Antigen CD26\n",
+      "                        Dipeptidyl Peptidase IV\n",
+      "                        EC 3.4.14.5\n",
+      "                        ADCP-2\n",
+      "                        DPP IV\n",
+      "                        ADABP\n",
+      "                        ADCP2\n",
+      "                        DPPIV\n",
+      "                        TP103\n",
+      "                        CD26\n",
+      "                        Post-Proline Dipeptidyl Aminopeptidase IV\n",
+      "                        Xaa-Pro-Dipeptidylaminopeptidase\n",
+      "                        Gly-Pro Naphthylamidase\n",
+      "                        Dipeptidyl-Peptidase 4\n",
+      "                        Dipeptidylpeptidase 4\n",
+      "                        CD26 Antigen\n",
+      "                        DPP4\n",
       "\n",
-      "Source: https://www.genecards.org/cgi-bin/carddisp.pl?gene=tnf\n",
+      "Source: https://www.genecards.org/cgi-bin/carddisp.pl?gene=dpp4\n",
       "\n",
-      "TNF top associated diseases/conditions/states:\n",
-      "                        psoriatic arthritis\n",
-      "                        rheumatoid arthritis\n",
-      "                        psoriasis\n",
-      "                        Crohn's disease\n",
-      "                        ankylosing spondylitis\n",
-      "                        ulcerative colitis\n",
-      "                        juvenile idiopathic arthritis\n",
-      "                        spondyloarthropathy\n",
-      "                        immune system disease\n",
-      "                        hidradenitis suppurativa\n",
+      "DPP4 top associated diseases/conditions/states:\n",
+      "                        type II diabetes mellitus\n",
+      "                        diabetes mellitus\n",
+      "                        type I diabetes mellitus\n",
+      "                        polycystic ovary syndrome\n",
+      "                        prediabetes syndrome\n",
+      "                        diabetic foot\n",
+      "                        Hypoglycemia\n",
+      "                        hyperlipidemia\n",
+      "                        myocardial infarction\n",
+      "                        stroke\n",
       "\n",
-      "Source: https://platform.opentargets.org/target/ENSG00000232810/associations\n"
+      "Source: https://platform.opentargets.org/target/ENSG00000197635/associations\n"
      ]
     }
    ],
    "source": [
-    "diseaseconditions, names, genename, link1, link2, closestpossibletarget = getopentargets(\"tnf\") #change input string to a gene name\n",
+    "diseaseconditions, names, genename, link1, link2, closestpossibletarget = getopentargets(\"dpp4\") #change input string to a gene name\n",
     "print(closestpossibletarget)\n",
     "print(genename + \" is also known as:\")\n",
     "for rafis in names:\n",
