--- a/Parsers/Parser.ipynb
+++ b/Parsers/Parser.ipynb
@@ -2,12 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 49,
-   "id": "d0bf8f51",
+   "execution_count": 59,
+   "id": "9f09e664",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def parse(driver,l):\n",
+    "def parse(driver,lists,target_frequency):\n",
+    "    l=lists \n",
     "    results = []\n",
     "    count = [0]*len(l)\n",
     "    \n",
@@ -56,35 +57,50 @@
     "\n",
     "                \n",
     "    #ADD TO RESULTS\n",
-    "    for y in l:\n",
-    "        if count[l.index(y)]>=3 and l[l.index(y)][len(l[l.index(y)])-1] not in results:\n",
-    "            results.append(y[len(y)-1])\n",
+    "    #temp = count\n",
+    "    #c = 0\n",
+    "    #while c<3:\n",
+    "    #    t = l[l.index(max(count))][len(l[l.index(max(count))])-1]\n",
+    "    #    if t not in results:\n",
+    "    #        results.append(t)\n",
+    "    #        count.remove(max(count))\n",
+    "    #    c+=1\n",
+    "        \n",
+    "    #for y in l:\n",
+    "    #    if count[l.index(y)]>=3 and l[l.index(y)][len(l[l.index(y)])-1] not in results:\n",
+    "    #        results.append(y[len(y)-1])\n",
     "    \n",
-    "    c = 0\n",
-    "    if len(results)==0:\n",
-    "        for y in l:\n",
-    "            if count[l.index(y)]!=0 and c<2:\n",
-    "                results.append(y[len(y)-1])\n",
-    "                count+=1\n",
+    "    r = sorted(zip(count, l), reverse=True)[:3]\n",
+    "    for x in r:\n",
+    "        if x[0]>=target_frequency:\n",
+    "            results.append(x[1][len(x[1])-1])\n",
+    "    \n",
+    "    #c = 0\n",
+    "    #if len(results)==0:\n",
+    "    #    for y in l:\n",
+    "    #        if count[l.index(y)]!=0 and c<2:\n",
+    "    #            results.append(y[len(y)-1])\n",
+    "    #            count+=1\n",
     "    \n",
     "    #for x in count:\n",
     "    #    print(\"Target: \"+l[count.index(x)][len(l[count.index(x)])-1])\n",
     "    #    print(\"#s of times seen: \"+str(x)+\"\\n\")\n",
-    "    \n",
+    "    #list = list[:3]\n",
     "    return results"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
-   "id": "ab6135cb",
+   "execution_count": 60,
+   "id": "181a3d4d",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Genes found\n"
+      "Genes found\n",
+      "TP53\n"
      ]
     }
    ],
@@ -94,14 +110,14 @@
     "import time\n",
     "driver = webdriver.Firefox(executable_path=r'C:\\Users\\jjohn\\Desktop\\Scraping\\geckodriver-v0.29.1-win64\\geckodriver.exe') #make sure this exists somewhere in a local, varies from user to user, and copy the path here\n",
     "\n",
-    "driver.get(\"https://patents.google.com/patent/EP2368907B1/en?q=roche&oq=roche\")\n",
+    "driver.get(\"https://patents.google.com/patent/KR20180010229A/en?q=tp53\")\n",
     "\n",
     "time.sleep(5)\n",
     "\n",
     "#GENE ARRAY\n",
     "l = [['Tumor Protein P53', 'P53', 'Cellular Tumor Antigen P53', 'Phosphoprotein P53', 'Antigen NY-CO-13', 'LFS1', 'Transformation-Related Protein 53', 'Mutant Tumor Protein 53', 'Li-Fraumeni Syndrome', 'P53 Tumor Suppressor', 'Tumor Suppressor P53', 'Tumor Supressor P53', 'Tumor Protein 53', 'BMFS5', 'TRP53', 'BCC7', 'TP53'], ['Tumor Necrosis Factor', 'TNF-Alpha', 'TNFSF2', 'Tumor Necrosis Factor Ligand Superfamily Member 2', 'TNF-A', 'TNFA', 'DIF', 'Tumor Necrosis Factor (TNF Superfamily, Member', 'Tumor Necrosis Factor Ligand 1F', 'Tumor Necrosis Factor-Alpha', 'TNF Superfamily, Member', 'TNF, Macrophage-Derived', 'TNF, Monocyte-Derived', 'APC1 Protein', 'Cachectin', 'TNLG1F', 'TNF'], ['Epidermal Growth Factor Receptor', 'ERBB1', 'Receptor Tyrosine-Protein Kinase ErbB-1', 'Erb-B2 Receptor Tyrosine Kinase 1', 'Proto-Oncogene C-ErbB-1', 'EC 2.7.10.1', 'ERBB', 'ERRP', 'HER1', 'Epidermal Growth Factor Receptor (Avian Erythroblastic Leukemia Viral (V-Erb-B) Oncogene Homolog)', 'Erythroblastic Leukemia Viral (V-Erb-B) Oncogene Homolog (Avian)', 'Avian Erythroblastic Leukemia Viral (V-Erb-B) Oncogene Homolog', 'Epidermal Growth Factor Receptor Tyrosine Kinase Domain', 'Cell Proliferation-Inducing Protein 61', 'Cell Growth Inhibiting Protein 40', 'EC 2.7.10', 'NISBD2', 'PIG61', 'MENA', 'EGFR'], ['Vascular Endothelial Growth Factor A', 'VPF', 'Vascular Permeability Factor', 'VEGF-A', 'VEGF', 'Vascular Endothelial Growth Factor A121', 'Vascular Endothelial Growth Factor A165', 'Vascular Endothelial Growth Factor', 'MVCD1', 'VEGFA'], ['Apolipoprotein E', 'Alzheimer Disease', 'Apolipoprotein E3', 'LDLCQ5', 'APO-E', 'ApoE4', 'Apo-E', 'APOE', 'AD2', 'LPG'], ['Interleukin 6', 'IL-6', 'B-Cell Stimulatory Factor 2', 'CTL Differentiation Factor', 'Hybridoma Growth Factor', 'Interferon Beta-2', 'Interleukin-6', 'IFN-Beta-2', 'BSF-2', 'IFNB2', 'BSF2', 'CDF', 'HGF', 'HSF', 'Interleukin 6 (Interferon, Beta', 'B-Cell Differentiation Factor', 'Interferon, Beta', 'Interleukin BSF-2', 'IL6'], ['Transforming Growth Factor Beta Induced', 'BIGH3', 'Transforming Growth Factor-Beta-Induced Protein Ig-H3', 'Transforming Growth Factor, Beta-Induced, 68kD', 'RGD-Containing Collagen-Associated Protein', 'Kerato-Epithelin', 'Beta Ig-H3', 'RGD-CAP', 'CDGG1', 'CDB1', 'Transforming Growth Factor, Beta-Induced, 68kDa', 'Transforming Growth Factor Beta-Induced 68kDa', 'Betaig-H3', 'TGFBI', 'CDG2', 'CSD1', 'CSD2', 'CSD3', 'EBMD', 'LCD1', 'CSD'], ['Methylenetetrahydrofolate Reductase', '5,10-Methylenetetrahydrofolate Reductase (NADPH)', 'Methylenetetrahydrofolate Reductase (NAD(P)H)', 'EC 1.5.1.20', 'MTHFR'], ['Estrogen Receptor 1', 'Nuclear Receptor Subfamily 3 Group A Member 1', 'ER-Alpha', 'NR3A1', 'Oestrogen Receptor Alpha', 'Estradiol Receptor', 'E2 Receptor Alpha', 'Estrogen Receptor', 'ESR', 'Era', 'ER', 'Estrogen Receptor Alpha E1-N2-E2-1-2', 'Estrogen Receptor Alpha E1-E2-1-2', 'Estrogen Nuclear Receptor Alpha', 'Estrogen Receptor Alpha', 'ESTRR', 'ESRA', 'ESR1'], ['AKT Serine/Threonine Kinase 1', 'PKB', 'RAC', 'V-Akt Murine Thymoma Viral Oncogene Homolog 1', 'RAC-Alpha Serine/Threonine-Protein Kinase', 'Protein Kinase B Alpha', 'Proto-Oncogene C-Akt', 'Protein Kinase B', 'RAC-PK-Alpha', 'EC 2.7.11.1', 'PKB Alpha', 'PRKBA', 'AKT', 'V-Akt Murine Thymoma Viral Oncogene-Like Protein 1', 'Serine-Threonine Protein Kinase', 'Rac Protein Kinase Alpha', 'PKB-ALPHA', 'RAC-ALPHA', 'RAC-Alpha', 'EC 2.7.11', 'AKT1m', 'AKT1']]\n",
     "\n",
-    "list = parse(driver,l)\n",
+    "list = parse(driver,l,300)\n",
     "\n",
     "print(\"Genes found\")\n",
     "for x in list:\n",
@@ -113,7 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3a6d226f",
+   "id": "f2ece98e",
    "metadata": {},
    "outputs": [],
    "source": []
