Fixed some bugs
-Some sites have different tags so if the gene data exists but not the right tag it'll return an empty list so it now takes new the tags into account. 
-Previously if Ensembl names didn't show up it would give an error, so now it manually searches the gene name on OpenTargets and picks the first result.

--- a/OpenTargets+Aliases/OpenTargets+Aliases.ipynb
+++ b/OpenTargets+Aliases/OpenTargets+Aliases.ipynb
@@ -27,7 +27,7 @@
     "        \n",
     "    replace = \"https://www.genecards.org/cgi-bin/carddisp.pl?gene=\" + cookiezi\n",
     "    driver.get(replace)\n",
-    "    time.sleep(1)\n",
+    "    time.sleep(2)\n",
     "    \n",
     "    dog = driver.find_elements_by_id(\"aliases_descriptions\")\n",
     "    \n",
@@ -62,8 +62,7 @@
     "    source =  \"https://www.genecards.org/cgi-bin/carddisp.pl?gene=\" + osugame   \n",
     "\n",
     "    source, driver, alternatesearch, newtarget = checkgeneexists(osugame)\n",
-    "    \n",
-    "    time.sleep(5)\n",
+    "    n = 0\n",
     "    \n",
     "    if alternatesearch != 2:\n",
     "        table = driver.find_element_by_id(\"aliases_descriptions\")\n",
@@ -73,15 +72,30 @@
     "        ensembl = \"\"\n",
     "        mrekk = []\n",
     "        check = 0\n",
-    "\n",
+    "        \n",
+    "        \n",
     "        for cat in aliasnames:\n",
+    "            cow = 0\n",
     "            numbers = \"\"\n",
     "            sups = cat.find_elements_by_tag_name(\"sup\")\n",
-    "            for fish in sups:\n",
-    "                numbers = numbers + \" \" + fish.text\n",
+    "            if not sups:\n",
+    "                sups = cat.find_elements_by_class_name(\"gc-ga-link\")\n",
+    "                cow = 1\n",
+    "            #print(cow)\n",
+    "            \n",
+    "        \n",
+    "            if cow == 0:\n",
+    "                for fish in sups:\n",
+    "                    numbers = numbers + \" \" + fish.text\n",
+    "            elif cow == 1:\n",
+    "                if \":\" not in cat.text:\n",
+    "                    for fish in sups:\n",
+    "                        numbers = numbers + \", \" + fish.text\n",
+    "                numbers = numbers[2:]\n",
+    "                numbers = \" (\" + numbers + \")\"\n",
     "            #print(cat.text)\n",
     "            #print(numbers)\n",
-    "            if numbers!= \"\":\n",
+    "            if numbers!= \"\" and numbers!=\" ()\":\n",
     "                #print(cat.text.split(numbers)[0])\n",
     "                mrekk.append(cat.text.split(numbers)[0])\n",
     "\n",
@@ -107,15 +121,27 @@
     "############################################################################################\n",
     "\n",
     " \n",
-    "def getopentargets(genename):\n",
+    "def getopentargets(genename): #genename will be a gene name\n",
     "\n",
     "    ensemblname, aliases,name, nd, genecardslink, searchno, target2 = genecards(genename)\n",
-    "    \n",
+    "    link = \"\"\n",
+    "    woof = 0\n",
     "    if searchno !=2:\n",
     "        conditions = []\n",
+    "        if ensemblname == \"NOT\":\n",
+    "            nd.get(\"https://platform.opentargets.org/search?q=grep1&page=1\")\n",
+    "            time.sleep(2)\n",
+    "            link = nd.find_element_by_class_name(\"jss27\").get_attribute(\"href\")\n",
+    "            woof = 1\n",
+    "        #print(link)\n",
+    "        \n",
     "        driver = nd #webdriver.Firefox() #executable_path=r'C:\\Users\\Kevin\\geckodriver-v0.29.1-win64\\geckodriver.exe') #make sure this exists somewhere in a local, varies from user to user, and copy the path here\n",
-    "        opentargetslink = \"https://platform.opentargets.org/target/\" + ensemblname + \"/associations\"\n",
-    "\n",
+    "        \n",
+    "        if woof == 0:\n",
+    "            opentargetslink = \"https://platform.opentargets.org/target/\" + ensemblname + \"/associations\"\n",
+    "        else:\n",
+    "            opentargetslink = link\n",
+    "        \n",
     "        driver.get(opentargetslink)\n",
     "        time.sleep(5)\n",
     "\n",
@@ -153,8 +179,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "diseaseconditions, names, genename, link1, link2, closestpossibletarget = getopentargets(\"dpp4\") #change input string to a gene name\n",
+    "#getopentargets test\n",
+    "\n",
+    "diseaseconditions, names, genename, link1, link2, closestpossibletarget = getopentargets(\"fam161b\") #change input string to a gene name\n",
     "print(closestpossibletarget)\n",
+    "    \n",
     "print(genename + \" is also known as:\")\n",
     "for rafis in names:\n",
     "    print(\"                        \" + rafis)\n",
@@ -174,7 +203,25 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#genecards test\n",
+    "\n",
+    "ensembl,names,genename, driver, link1, alternatesearch, closestpossibletarget = genecards(\"grep1\") #change input string to a gene name\n",
+    "print(closestpossibletarget)\n",
+    "    \n",
+    "print(genename + \" is also known as:\")\n",
+    "for rafis in names:\n",
+    "    print(\"                        \" + rafis)\n",
+    "print()\n",
+    "print(\"Source: \"  + link1)\n",
+    "\n",
+    "\n",
+    "print(ensembl)\n",
+    "\n",
+    "\n",
+    "driver.close()\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -200,7 +247,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
