More fixes to code
-Accidentally left hardcoded stuff in earlier, removed now
-More robust code I guess for handling different cases on different sites, although if the gene doesn't exist on opentargets.org it'll throw an error, but the likelihood is near 0 anyways

--- a/OpenTargets+Aliases/OpenTargets+Aliases.ipynb
+++ b/OpenTargets+Aliases/OpenTargets+Aliases.ipynb
@@ -21,9 +21,9 @@
     "\n",
     "def checkgeneexists(cookiezi):\n",
     "    \n",
-    "    driver = webdriver.Firefox()\n",
+    "    driver = webdriver.Firefox(executable_path=r'C:\\Users\\Kevin\\geckodriver-v0.29.1-win64\\geckodriver.exe')\n",
     "                                 #if not working (not in env variables), paste in executable path to geckodriver.exe file\n",
-    "                                 #executable_path=r'C:\\Users\\Kevin\\geckodriver-v0.29.1-win64\\geckodriver.exe')\n",
+    "                                 #executable_path=r'C:\\Users\\Kevin\\geckodriver-v0.29.1-win64\\geckodriver.exe'\n",
     "        \n",
     "    replace = \"https://www.genecards.org/cgi-bin/carddisp.pl?gene=\" + cookiezi\n",
     "    driver.get(replace)\n",
@@ -129,13 +129,13 @@
     "    if searchno !=2:\n",
     "        conditions = []\n",
     "        if ensemblname == \"NOT\":\n",
-    "            nd.get(\"https://platform.opentargets.org/search?q=grep1&page=1\")\n",
+    "            nd.get(\"https://platform.opentargets.org/search?q=\" + name + \"&page=1\")\n",
     "            time.sleep(2)\n",
-    "            link = nd.find_element_by_class_name(\"jss27\").get_attribute(\"href\")\n",
+    "            link = nd.find_element_by_class_name(\"jss28\").get_attribute(\"href\")\n",
     "            woof = 1\n",
     "        #print(link)\n",
     "        \n",
-    "        driver = nd #webdriver.Firefox() #executable_path=r'C:\\Users\\Kevin\\geckodriver-v0.29.1-win64\\geckodriver.exe') #make sure this exists somewhere in a local, varies from user to user, and copy the path here\n",
+    "        driver = nd #webdriver.Firefox() #executable_path=r'C:\\Users\\Kevin\\geckodriver-v0.29.1-win64\\geckodriver.exe' #make sure this exists somewhere in a local, varies from user to user, and copy the path here\n",
     "        \n",
     "        if woof == 0:\n",
     "            opentargetslink = \"https://platform.opentargets.org/target/\" + ensemblname + \"/associations\"\n",
@@ -181,7 +181,7 @@
    "source": [
     "#getopentargets test\n",
     "\n",
-    "diseaseconditions, names, genename, link1, link2, closestpossibletarget = getopentargets(\"fam161b\") #change input string to a gene name\n",
+    "diseaseconditions, names, genename, link1, link2, closestpossibletarget = getopentargets(\"hoxa4\") #change input string to a gene name\n",
     "print(closestpossibletarget)\n",
     "    \n",
     "print(genename + \" is also known as:\")\n",
