--- a/OpenTargets+Aliases/OpenTargets+Aliases.ipynb
+++ b/OpenTargets+Aliases/OpenTargets+Aliases.ipynb
@@ -21,7 +21,7 @@
     "\n",
     "def checkgeneexists(cookiezi):\n",
     "    \n",
-    "    driver = webdriver.Firefox(executable_path=r'C:\\Users\\Kevin\\geckodriver-v0.29.1-win64\\geckodriver.exe')\n",
+    "    driver = webdriver.Firefox()\n",
     "                                 #if not working (not in env variables), paste in executable path to geckodriver.exe file\n",
     "                                 #executable_path=r'C:\\Users\\Kevin\\geckodriver-v0.29.1-win64\\geckodriver.exe'\n",
     "        \n",
