--- a/OpenTargets+Aliases/OpenTargets+Aliases.ipynb
+++ b/OpenTargets+Aliases/OpenTargets+Aliases.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
@@ -21,13 +21,13 @@
     "\n",
     "def checkgeneexists(cookiezi):\n",
     "    \n",
-    "    driver = webdriver.Firefox()\n",
+    "    driver = webdriver.Firefox(executable_path=r'C:\\Users\\Kevin\\geckodriver-v0.29.1-win64\\geckodriver.exe')\n",
     "                                 #if not working (not in env variables), paste in executable path to geckodriver.exe file\n",
-    "                                 #executable_path=r'C:\\Users\\Kevin\\geckodriver-v0.29.1-win64\\geckodriver.exe')\n",
+    "                                 #executable_path=r'C:\\Users\\Kevin\\geckodriver-v0.29.1-win64\\geckodriver.exe'\n",
     "        \n",
     "    replace = \"https://www.genecards.org/cgi-bin/carddisp.pl?gene=\" + cookiezi\n",
     "    driver.get(replace)\n",
-    "    time.sleep(1)\n",
+    "    time.sleep(2)\n",
     "    \n",
     "    dog = driver.find_elements_by_id(\"aliases_descriptions\")\n",
     "    \n",
@@ -39,13 +39,11 @@
     "        time.sleep(5)\n",
     "        check = driver.find_elements_by_class_name(\"gc-gene-symbol\")\n",
     "        if check:\n",
-    "            #print(\"New target found\")\n",
     "            replace = \"https://www.genecards.org/cgi-bin/carddisp.pl?gene=\" + driver.find_element_by_class_name(\"gc-gene-symbol\").text\n",
     "            vaxei = driver.find_element_by_class_name(\"gc-gene-symbol\").text\n",
     "            driver.get(replace)\n",
     "            cat = 1\n",
     "        else:\n",
-    "            #print(\"Fuck\")\n",
     "            vaxei = \"Target does not exist, nor does it have related targets! Try again\"\n",
     "            cat = 2\n",
     "\n",
@@ -64,8 +62,7 @@
     "    source =  \"https://www.genecards.org/cgi-bin/carddisp.pl?gene=\" + osugame   \n",
     "\n",
     "    source, driver, alternatesearch, newtarget = checkgeneexists(osugame)\n",
-    "    \n",
-    "    time.sleep(5)\n",
+    "    n = 0\n",
     "    \n",
     "    if alternatesearch != 2:\n",
     "        table = driver.find_element_by_id(\"aliases_descriptions\")\n",
@@ -75,15 +72,30 @@
     "        ensembl = \"\"\n",
     "        mrekk = []\n",
     "        check = 0\n",
-    "\n",
+    "        \n",
+    "        \n",
     "        for cat in aliasnames:\n",
+    "            cow = 0\n",
     "            numbers = \"\"\n",
     "            sups = cat.find_elements_by_tag_name(\"sup\")\n",
-    "            for fish in sups:\n",
-    "                numbers = numbers + \" \" + fish.text\n",
+    "            if not sups:\n",
+    "                sups = cat.find_elements_by_class_name(\"gc-ga-link\")\n",
+    "                cow = 1\n",
+    "            #print(cow)\n",
+    "            \n",
+    "        \n",
+    "            if cow == 0:\n",
+    "                for fish in sups:\n",
+    "                    numbers = numbers + \" \" + fish.text\n",
+    "            elif cow == 1:\n",
+    "                if \":\" not in cat.text:\n",
+    "                    for fish in sups:\n",
+    "                        numbers = numbers + \", \" + fish.text\n",
+    "                numbers = numbers[2:]\n",
+    "                numbers = \" (\" + numbers + \")\"\n",
     "            #print(cat.text)\n",
     "            #print(numbers)\n",
-    "            if numbers!= \"\":\n",
+    "            if numbers!= \"\" and numbers!=\" ()\":\n",
     "                #print(cat.text.split(numbers)[0])\n",
     "                mrekk.append(cat.text.split(numbers)[0])\n",
     "\n",
@@ -108,16 +120,28 @@
     "\n",
     "############################################################################################\n",
     "\n",
-    "\n",
-    "def getopentargets(genename):\n",
+    " \n",
+    "def getopentargets(genename): #genename will be a gene name\n",
     "\n",
     "    ensemblname, aliases,name, nd, genecardslink, searchno, target2 = genecards(genename)\n",
-    "    \n",
+    "    link = \"\"\n",
+    "    woof = 0\n",
     "    if searchno !=2:\n",
     "        conditions = []\n",
-    "        driver = nd #webdriver.Firefox() #executable_path=r'C:\\Users\\Kevin\\geckodriver-v0.29.1-win64\\geckodriver.exe') #make sure this exists somewhere in a local, varies from user to user, and copy the path here\n",
-    "        opentargetslink = \"https://platform.opentargets.org/target/\" + ensemblname + \"/associations\"\n",
-    "\n",
+    "        if ensemblname == \"NOT\":\n",
+    "            nd.get(\"https://platform.opentargets.org/search?q=\" + name + \"&page=1\")\n",
+    "            time.sleep(2)\n",
+    "            link = nd.find_element_by_class_name(\"jss28\").get_attribute(\"href\")\n",
+    "            woof = 1\n",
+    "        #print(link)\n",
+    "        \n",
+    "        driver = nd #webdriver.Firefox() #executable_path=r'C:\\Users\\Kevin\\geckodriver-v0.29.1-win64\\geckodriver.exe' #make sure this exists somewhere in a local, varies from user to user, and copy the path here\n",
+    "        \n",
+    "        if woof == 0:\n",
+    "            opentargetslink = \"https://platform.opentargets.org/target/\" + ensemblname + \"/associations\"\n",
+    "        else:\n",
+    "            opentargetslink = link\n",
+    "        \n",
     "        driver.get(opentargetslink)\n",
     "        time.sleep(5)\n",
     "\n",
@@ -151,54 +175,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Target found\n",
-      "TNF is also known as:\n",
-      "                        Tumor Necrosis Factor\n",
-      "                        TNF-Alpha\n",
-      "                        TNFSF2\n",
-      "                        Tumor Necrosis Factor Ligand Superfamily Member 2\n",
-      "                        TNF-A\n",
-      "                        TNFA\n",
-      "                        DIF\n",
-      "                        Tumor Necrosis Factor (TNF Superfamily, Member\n",
-      "                        Tumor Necrosis Factor Ligand 1F\n",
-      "                        Tumor Necrosis Factor-Alpha\n",
-      "                        TNF Superfamily, Member\n",
-      "                        TNF, Macrophage-Derived\n",
-      "                        TNF, Monocyte-Derived\n",
-      "                        APC1 Protein\n",
-      "                        Cachectin\n",
-      "                        TNLG1F\n",
-      "                        TNF\n",
-      "\n",
-      "Source: https://www.genecards.org/cgi-bin/carddisp.pl?gene=tnf\n",
-      "\n",
-      "TNF top associated diseases/conditions/states:\n",
-      "                        psoriatic arthritis\n",
-      "                        rheumatoid arthritis\n",
-      "                        psoriasis\n",
-      "                        Crohn's disease\n",
-      "                        ankylosing spondylitis\n",
-      "                        ulcerative colitis\n",
-      "                        juvenile idiopathic arthritis\n",
-      "                        spondyloarthropathy\n",
-      "                        immune system disease\n",
-      "                        hidradenitis suppurativa\n",
-      "\n",
-      "Source: https://platform.opentargets.org/target/ENSG00000232810/associations\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "diseaseconditions, names, genename, link1, link2, closestpossibletarget = getopentargets(\"tnf\") #change input string to a gene name\n",
+    "#getopentargets test\n",
+    "\n",
+    "diseaseconditions, names, genename, link1, link2, closestpossibletarget = getopentargets(\"hoxa4\") #change input string to a gene name\n",
     "print(closestpossibletarget)\n",
+    "    \n",
     "print(genename + \" is also known as:\")\n",
     "for rafis in names:\n",
     "    print(\"                        \" + rafis)\n",
@@ -218,7 +203,25 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#genecards test\n",
+    "\n",
+    "ensembl,names,genename, driver, link1, alternatesearch, closestpossibletarget = genecards(\"grep1\") #change input string to a gene name\n",
+    "print(closestpossibletarget)\n",
+    "    \n",
+    "print(genename + \" is also known as:\")\n",
+    "for rafis in names:\n",
+    "    print(\"                        \" + rafis)\n",
+    "print()\n",
+    "print(\"Source: \"  + link1)\n",
+    "\n",
+    "\n",
+    "print(ensembl)\n",
+    "\n",
+    "\n",
+    "driver.close()\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -244,7 +247,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
